--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,165 @@
-* {
+*{
     margin: 0;
     padding: 0;
+
+}
+
+body{
+    z-index: 10;
+    overflow: hidden;
+    background-image: linear-gradient(rgb(33, 33, 33),rgb(42, 42, 42));
 }
 
 #fundo {
-    top: 0px;
-    left: 0px;
-    width: 100vw;
-    height: 30vw;
+    position: absolute;
+    top: 1rem;
+    left: 4.5vw;
+    width: 90vw;
+    height: 71vh;
     background-color: black;
-    text-align: center;
+    z-index: 99;
+    outline: 2px solid rgb(138, 138, 138);
+    border-radius: 5px;
 }
 
-.painel {
+#painel {
+    width: 90vw;
+    height: 25vh;
+    position: absolute;
+    top: 74vh;
+    left: 4.5vw;
     text-align: center;
     box-sizing: border-box;
-    border: 1px solid rgb(158, 0, 0);
-    width: 30vw;
-    margin: 1rem auto;
+    padding: 1.2rem;
+    z-index: 99;
+    overflow: hidden;
+    box-shadow: 0 0 15px rgb(13, 13, 13);
+    background-color: rgb(45, 32, 25);
 }
 
-.painel > button{
-    margin: .4rem;
+#painel > button{
+    height: 70px;
+    width: 70px;
+    border: none;
+    background-color: inherit;
+    border-radius: 10px;
+}
+
+#painel button:hover{
+    background-color: rgb(187, 187, 187);
+}
+
+#painel img{
+    width: 100%;
+    height: 100%;   
+}
+
+.down{
+    margin-top: .3rem;
 }
 
 #div2 {
     position: absolute;
-    top: 2vw;
-    left: 3vw;
-    width: 10vw;
-    height: 10vw;
-    background-color: green;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    top: 5vw;
+    left: 5vw;
+    width: 2.5vw;
+    height: 2.5vw;
+    background-color: rgb(233, 31, 31);
+    box-shadow: 0 0 4px red;
+    border-radius: 7px;
 }
 
 #div1 {
     position: absolute;
-    top: 14vw;
-    left: 14vw;
-    width: 10vw;
-    height: 10vw;
-    background-color: lightgreen;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    top: 15vw;
+    left: 15vw;
+    width: 5vw;
+    height: 5vw;
+    background-color: yellow;
+    box-shadow: 0 0 8px rgb(223, 194, 9);
+}   
+
+#points{
+    font-size: 1.3rem;
+    font-family:'Courier New', Courier, monospace;
+    color: white;
+    background-color: tomato;
+    border-left: 2px solid rgb(196, 196, 196);
+    border-radius: 5px;
+    text-align: center;
+    position: absolute;
+    top: 1.7vh;
+    left: 3vw;
+    padding: .5rem;
+    z-index: 99;
 }
 
-@media (max-width: 900px){
-    #fundo{
-        height: 75vw;
+.shoot{
+    background-color: rgb(255, 0, 166);
+    width: 15px;
+    height: 15px;
+    border-radius: 10px;
+    position:absolute;
+    z-index: 1000;
+    box-shadow: 0 0 15px 7px rgb(223, 60, 87);
+}
+
+#endGame{
+    width: 80vw;
+    position: absolute;
+    top: 12vh;
+    left: 10vw;
+    background-image: linear-gradient(to bottom right, rgb(176, 27, 27), rgb(135, 15, 15));
+    color: white;
+    font-size: 3rem;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    z-index: 10000;
+    box-sizing: border-box;
+    padding: 3rem;
+    border-radius: 60px;
+    outline: 2px solid white;
+    /* box-shadow: 0px 0px 80px white; */
+}
+
+#again{
+    height: 30%;
+    width: 30%;
+    margin: 0 auto;
+    font-size: 1.4rem;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color:white;
+    background-color: tomato;
+    box-sizing: border-box;
+    padding: .5rem;
+    border-radius: 10px;
+    border: none;
+    transition: .75s ease-in-out;
+}
+
+#again:hover{
+    background-color: rgb(245, 61, 29);
+}
+
+@media(max-width: 600px){
+    #div2 {
+        width: 3vw;
+        height: 3vw;
+    }
+    
+    #div1 {
+        width: 6vw;
+        height: 6vw;
+    } 
+
+
+    #endGame{
+        font-size: 1.5rem;
+        width: 90vw;
+        left: 5vw;
     }
 
-    .painel{
-        width: 70vw;
+    #again{
+        width: auto;
     }
 }
