--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 body{
     z-index: 10;
     background-image: linear-gradient(rgb(33, 33, 33),rgb(42, 42, 42));
+    min-height: 600px;
 }
 
 #fundo {
@@ -24,6 +25,7 @@ body{
 #painel {
     width: 90vw;
     height: 25vh;
+    min-height: 200px;
     position: absolute;
     top: 74vh;
     left: 4.5vw;
@@ -151,9 +153,21 @@ body{
         height: 6vw;
     } 
 
+    #fundo {
+        position: absolute;
+        width: 90vw;
+        height: 65vh;
+    }
+    
+    #painel {
+        top: 70vh;
+        width: 90vw;
+        height: 35vh;
+    }
+
 
     #endGame{
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         width: 90vw;
         left: 5vw;
     }
