--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body{
     border: none;
     background-color: inherit;
     border-radius: 10px;
+    -webkit-user-drag: none;
 }
 
 #painel button:hover{
