--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body {
     font-size: 1.3rem;
     font-family: 'Courier New', Courier, monospace;
     color: white;
-    background-color: tomato;
+    background-color: #ff6347;
     border-left: 2px solid rgb(196, 196, 196);
     border-radius: 5px;
     text-align: center;
@@ -94,6 +94,20 @@ body {
     left: 3vw;
     padding: .5rem;
     z-index: 99;
+}
+
+#sound{
+    height: 2.75rem;
+    position: absolute;
+    top: 1vh;
+    left: 93vw;
+    z-index: 99;
+    cursor: pointer;
+}
+
+#sound > img{
+    height: 100%;
+    width: 100%;
 }
 
 .shoot {
@@ -131,7 +145,7 @@ body {
     left: 10vw;
     background-image: linear-gradient(to bottom right, rgb(176, 27, 27), rgb(135, 15, 15));
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     z-index: 10000;
@@ -153,7 +167,7 @@ body {
     padding: .5rem;
     border-radius: 10px;
     border: none;
-    transition: .75s ease-in-out;
+    transition: .5s ease-in-out;
 }
 
 #again:hover {
@@ -196,5 +210,16 @@ body {
 
     #again {
         width: auto;
+    }
+
+    #popUp{
+        font-size: 1rem;
+        width: 90vw;
+        left: 5vw;
+    }
+
+    #sound{
+        top: 1.7vh;
+        left: 88vw;
     }
 }
