--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,13 @@ body {
     left: 3vw;
     padding: .5rem;
     z-index: 99;
+    cursor: pointer;
+    transition: .25s ease-in-out;
+}
+
+#points:hover{
+    background-color: #dd533a;
+    border-left: 2px solid rgb(255, 255, 255);
 }
 
 #sound{
@@ -103,6 +110,12 @@ body {
     left: 93vw;
     z-index: 99;
     cursor: pointer;
+    transition: .25s ease-in-out;
+}
+
+#sound:hover{
+    border-radius: 45px;
+    outline: 3px solid white;
 }
 
 #sound > img{
@@ -155,9 +168,8 @@ body {
     outline: 2px solid white;
 }
 
-#again {
+#popUp > button{
     height: 30%;
-    width: 30%;
     margin: 0 auto;
     font-size: 1.4rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -170,8 +182,12 @@ body {
     transition: .5s ease-in-out;
 }
 
-#again:hover {
-    background-color: rgb(245, 61, 29);
+#popUp > button:hover{
+    background-color: rgb(245, 61, 29);;
+}
+
+h1{
+    font-family: 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 @media(max-width: 600px) {
